# waterplant

./: Cargo.toml
.cargo/: config.toml
src/: lcd_i2c.rs  lib.rs  main.rs
