[package]
name = "waterplant"
version = "0.1.0"
authors = ["Fedor Nezhivoi <gyzerok@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.11.0", features = ["embassy", "embassy-time", "embassy-time-systick", "async"]}
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
embassy-executor = { version = "0.2.1", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-time = { version = "0.1.2", features = ["nightly", "unstable-traits", "tick-hz-16_000_000"] }
static_cell = "1.2.0"
embedded-hal       = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1     = { version = "=1.0.0-alpha.11", package = "embedded-hal" }
embedded-hal-async = "=0.2.0-alpha.2"
