[package]
name = "waterplant"
version = "0.1.0"
authors = ["Fedor Nezhivoi <gyzerok@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.11.0", features = ["embassy", "embassy-time", "embassy-time-timg0", "async"]}
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "6b53683586e29bcec7af23309d788fed4fb49f2c", features = ["esp32c3", "wifi", "embedded-svc", "async"] }
embassy-executor = { version = "0.2.1", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-time = { version = "0.1.2", features = ["nightly", "unstable-traits", "tick-hz-1_000_000"] }
static_cell = "1.2.0"
embedded-svc = { version = "0.25.3", default-features = false, features = ["nightly"]}
embedded-hal-async = "=0.2.0-alpha.2"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"

[profile.release]
lto = "off"
