[package]
name = "waterplant"
version = "0.1.0"
authors = ["Fedor Nezhivoi <gyzerok@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0", features = ["embassy", "embassy-time", "embassy-time-timg0", "async"]}
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "0d502eb66ad0db4607844f81ac2eb5cfedc7e0c3", features = ["esp32c3", "wifi", "embedded-svc", "async"] }
embassy-executor = { version = "0.3.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-time = { version = "0.1.3", features = ["nightly", "unstable-traits", "tick-hz-1_000_000"] }
static_cell = "1.2.0"
embedded-svc = { version = "0.25.3", default-features = false, features = ["nightly"]}
embedded-hal-async = "=1.0.0-rc.1"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"

[profile.release]
lto = "off"
